getting the game to work. addition is all that remains

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <br>
         <button class="btn btn-primary" id="red_gem"><img src="assets/images/Red_gem.png" /></button>
         <button class="btn btn-primary" id="blue_gem"><img src="assets/images/blue_gem.png" /></button>
-        <button class="btn btn-primary" id="green_gem"><img src="assets/images/green_gem.png" /></button>
+        <button class="btn btn-primary" id="green_gem"><img src="assets/images/Green_gem.png" /></button>
         <button class="btn btn-primary" id="purple_gem"><img src="assets/images/Purple_gem.png" /></button>
         <br>
         <br>
